# environmental-aiagent

./: .env.example  .gitignore  README.md  pyproject.toml  run_app.py
config/: gpu_config.json
data/: .gitkeep
models/: .gitkeep  current_model_info.json
models/improved_beijing_air_quality_lstm_20251223_213640/: feature_names.json  metadata.json  model.pth  scaler.pkl  training_history.json
src/: __init__.py  air_guardian_system.py  config.py
src/gpu_utils/: __init__.py  gpu_manager.py
src/llm_analyzer/: __init__.py  llm_analyzer.py
src/model_trainer/: __init__.py  data_requirements_generator.py  model_trainer.py
src/prediction_engine/: __init__.py  prediction_engine.py
src/utils/: logger.py
src/web_interface/: README.md  __init__.py  document_generator.py  streamlit_app.py  visualization.py  web_interface.py
